apps/homelab/jellyfleet/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: jellyfleet
  labels: &labels
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/component: media-automation
    app.kubernetes.io/instance: sonarr
    app.kubernetes.io/part-of: jellyfleet
    app.kubernetes.io/version: "latest"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sonarr
      app.kubernetes.io/instance: sonarr
  template:
    metadata:
      labels: *labels
    spec:
      nodeSelector:
        role: downloads-media
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:latest
          ports:
            - containerPort: 8989
          volumeMounts:
            - name: config
              mountPath: /config
            - name: shows
              mountPath: /shows
            - name: downloads
              mountPath: /downloads
          livenessProbe:
            httpGet:
              path: /
              port: 8989
            initialDelaySeconds: 30
            periodSeconds: 20
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /
              port: 8989
            initialDelaySeconds: 10
            periodSeconds: 20
            failureThreshold: 5
      volumes:
        - name: config
          hostPath:
            path: /data/configs/sonarr
            type: DirectoryOrCreate
        - name: downloads
          hostPath:
            path: /data/torrents/downlodas
            type: DirectoryOrCreate
        - name: shows
          persistentVolumeClaim:
            claimName: nfs-media-shows
